[tool.poetry]
name = "mtg-ai"
version = "0.1.0"
description = ""
authors = ["Jason Belk <jabelk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=2.2.3,<3.0.0"
openai = ">=1.82.0,<2.0.0"
requests = ">=2.32.3,<3.0.0"
pathlib = ">=1.0.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"